# Roam.io

./: .gitignore  README.md  pyproject.toml  simple_run.py  streamlit_app.py  test_run.py
src/: crew.py  main.py
src/config/: agents.yaml  tasks.yaml
src/tools/: custom_tool.py
