[project]
name = "roamio"
version = "0.1.0"
description = "surprise-travel using crewAI"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.152.0",
    "crewai-tools>=0.58.0",
    "streamlit>=1.51.0",
]

[project.scripts]
roamio = "src.main:run"
train = "src.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "roamio"
version = "0.1.0"
description = "surprise-travel using crewAI"
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]
